welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: ')' expected but 'return' found.
	if (num % 10 <= 2 || (((num +2)  % 10 ) <= 2  ) return true 
                                                        ^